hphp/test/slow/traits/conflicts/async_mismatch.php.expectf
Fatal error: Redeclaration of trait method 'T::b' is inconsistent about 'async' in %s/async_mismatch.php on line 8
